updated docs and EventoR
